--- a/react/.env
+++ b/react/.env
@@ -1,1 +1,3 @@
-VITE_API_URL = 'http://localhost:5000/allProducts'
+VITE_API_URL = 'http://localhost:3000/allProducts'
+
+VITE_FLASK_API_URL = "http://localhost:5000"
