--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch server.js",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node --watch server.js"
+    
   },
   "keywords": [],
   "author": "",
